comments in English

--- a/GAM/GAMParser.ipynb
+++ b/GAM/GAMParser.ipynb
@@ -15,7 +15,7 @@
    "id": "ab1ebccd",
    "metadata": {},
    "source": [
-    "# Constantes"
+    "# Constants"
    ]
   },
   {
@@ -25,8 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CONSTANTES\n",
+    "# CONSTANTS\n",
     "\n",
+    "# Object template to communicate data to the CM\n",
     "TEMPLATE = {\n",
     "    \"id\": None,\n",
     "    \"userid\": None,\n",
@@ -41,22 +42,6 @@
     "}\n",
     "\n",
     "FOLDER = \"./data/\"\n",
-    "C_USER =  dict(\n",
-    "    datafile =\"GAMGameusers.json\",\n",
-    "    demographicAtts = ['Gender', 'Age', 'RelationshipWithArt','RelationshipWithMuseum', 'ContentInLIS'],\n",
-    "    userIdAtt = 'authorUsername',\n",
-    "    ugcfile = \"ugcUsers.json\"\n",
-    ")\n",
-    "\n",
-    "C_CONTRIB = dict(\n",
-    "    datafile = \"dataset_celi.json\",\n",
-    "    userIdAtt = 'authorUsername',\n",
-    "    artifactIdAtt = 'artworkId',\n",
-    "    contribIdAtt = '_id',\n",
-    "    contribAtts = ['itMakesMeFeel','itMakesMeThinkAbout','itRemindsMeOf'],\n",
-    "    contribAttValues = ['emotions', 'sentiment'],\n",
-    "    ugcfile = \"ugcContributions.json\"\n",
-    ")\n",
     "\n",
     "_ID = 0\n"
    ]
@@ -66,12 +51,30 @@
    "id": "e847cde3",
    "metadata": {},
    "source": [
-    "# Usuarios"
+    "# Users\n",
+    "\n",
+    "It transforms demographic data from a LDH dataset into the ugc data sent to the CM by the UM"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "e0584895",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Constants used when transforming demographic data\n",
+    "C_USER =  dict(\n",
+    "    datafile =\"GAMGameusers.json\",\n",
+    "    demographicAtts = ['Gender', 'Age', 'RelationshipWithArt','RelationshipWithMuseum', 'ContentInLIS'],\n",
+    "    userIdAtt = 'authorUsername',\n",
+    "    ugcfile = \"ugcUsers.json\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "caa934fb",
    "metadata": {
     "scrolled": false
@@ -84,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bd649542",
    "metadata": {},
    "outputs": [],
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bf642f3e",
    "metadata": {},
    "outputs": [],
@@ -119,22 +122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "17ab7e83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# postDict es un diccionario en las que las claves son ids de usuarios"
+    "# postDict is a dictionary with userids as fields and arrays of demographic data for the CM as values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3d8aea07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Para hacer los POST:\n",
+    "# Execute POST:\n",
     "# server = \"http://localhost:8080\"\n",
     "# for key, value in postDict.items():\n",
     "#    response=requests.post(f'{server}/v1.1/users/{key}/update-generated-content', json = value)\n",
@@ -146,12 +149,32 @@
    "id": "b5337be6",
    "metadata": {},
    "source": [
-    "# Contribuciones de los usuarios\n"
+    "# User contributions\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "id": "98661034",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Constants related with user contributions\n",
+    "C_CONTRIB = dict(\n",
+    "    datafile = \"dataset_celi.json\",\n",
+    "    userIdAtt = 'authorUsername',\n",
+    "    artifactIdAtt = 'artworkId',\n",
+    "    contribIdAtt = '_id',\n",
+    "    contribAtts = ['itMakesMeFeel','itMakesMeThinkAbout','itRemindsMeOf'],\n",
+    "    contribAttValues = ['emotions', 'sentiment'],\n",
+    "    ugcfile = \"ugcContributions.json\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "0689798b",
    "metadata": {},
    "outputs": [
@@ -9596,7 +9619,7 @@
        "  '@id': '622747aa3231de746b3f2926'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9609,7 +9632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "f1af5b32",
    "metadata": {},
    "outputs": [],
@@ -9629,33 +9652,12 @@
     "        analysysValue =  interaction[\"multimediaData\"][\"analysis\"][contribAtt]\n",
     "        interactionData[\"pvalue\"] = analysysValue[contribValue] if contribValue in analysysValue else \"\"\n",
     "        interactions.append(interactionData)\n",
-    "    return interactions\n",
-    "\n",
-    "\n",
-    "def createNonEmptyUserContribution(contrib, contribAtt, contribValue):\n",
-    "    currentData = TEMPLATE.copy()\n",
-    "    currentData[\"category\"] = \"interest\"\n",
-    "    currentData[\"userid\"] = contrib[C_CONTRIB[\"userIdAtt\"]]\n",
-    "    currentData[\"id\"] = contrib[C_CONTRIB[\"contribIdAtt\"]]\n",
-    "    interactions = []\n",
-    "    # OJO: El separador \".\" no le gusta a Python en los dict. Yo lo cambiaría por \"_\"\n",
-    "    sep = \".\"\n",
-    "    for interaction in contrib[\"parts\"]:\n",
-    "        analysysValue =  interaction[\"multimediaData\"][\"analysis\"][contribAtt]\n",
-    "        # Solo añadimos la interacción si hay datos. Si no, ¿para qué la añadimos al CM?\n",
-    "        if contribValue in analysysValue:\n",
-    "            interactionData = currentData.copy()\n",
-    "            interactionData[\"origin\"] = interaction[C_CONTRIB[\"artifactIdAtt\"]]\n",
-    "            interactionData[\"pname\"] = f'{contribAtt}{sep}{contribValue}'\n",
-    "        \n",
-    "            interactionData[\"pvalue\"] = analysysValue[contribValue]\n",
-    "            interactions.append(interactionData)\n",
     "    return interactions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "7ba87ff5",
    "metadata": {},
    "outputs": [],
@@ -9676,32 +9678,12 @@
     "        textValue =  interaction[\"multimediaData\"][\"answersToTemplates\"][contribAtt]\n",
     "        interactionData[\"pvalue\"] = textValue\n",
     "        interactions.append(interactionData)\n",
-    "    return interactions\n",
-    "\n",
-    "def createNonEmptyUserTextContribution(contrib, contribAtt):\n",
-    "    currentData = TEMPLATE.copy()\n",
-    "    currentData[\"category\"] = \"interest\"\n",
-    "    currentData[\"userid\"] = contrib[C_CONTRIB[\"userIdAtt\"]]\n",
-    "    currentData[\"id\"] = contrib[C_CONTRIB[\"contribIdAtt\"]]\n",
-    "    interactions = []\n",
-    "    # OJO: El separador \".\" no le gusta a Python en los dict. Yo lo cambiaría por \"_\"\n",
-    "    sep = \".\"\n",
-    "    for interaction in contrib[\"parts\"]:\n",
-    "        textValue =  interaction[\"multimediaData\"][\"answersToTemplates\"][contribAtt]\n",
-    "        if len(textValue)>0:\n",
-    "            interactionData = currentData.copy()\n",
-    "            interactionData[\"origin\"] = interaction[C_CONTRIB[\"artifactIdAtt\"]]\n",
-    "            # Add text (e.g. itMakesMeFeel.text)\n",
-    "            interactionData[\"pname\"] = f'{contribAtt}{sep}text'\n",
-    "            textValue =  interaction[\"multimediaData\"][\"answersToTemplates\"][contribAtt]\n",
-    "            interactionData[\"pvalue\"] = textValue\n",
-    "            interactions.append(interactionData)\n",
-    "    return interactions"
+    "    return interactions\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "e5f73a1a",
    "metadata": {},
    "outputs": [
@@ -21413,7 +21395,7 @@
        "    'category': 'interest'}]}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21426,25 +21408,14 @@
     "        key = f'{contribAtt}_{contribValue}'\n",
     "        attValueDict = {}\n",
     "        for contrib in contribData: \n",
-    "            # Si no queremos generar datos para las contribuciones que no aportan nada,\n",
-    "            # sustituir   \n",
-    "            #      createUserContribution\n",
-    "            # con\n",
-    "            #      createNonEmptyUserContribution\n",
-    "            # TODO: ¿Qué pasa si una contribución tiene texto pero no genera emociones? ¿Produce problemas con esto? \n",
     "            result = createUserContribution(contrib, contribAtt, contribValue)\n",
     "            attValueDict[contrib[C_CONTRIB[\"userIdAtt\"]]] = result\n",
     "        postDict[key] = attValueDict\n",
     "\n",
-    "        # El texto de la contribución es especial porque no tengo que acceder a analysis sino a answersToTemplates\n",
+    "        # The text is different because it is not in analysis but in answersToTemplates\n",
     "        key = f'{contribAtt}_text'\n",
     "        attValueDict = {}\n",
     "        for contrib in contribData: \n",
-    "            # Si no queremos generar datos para las contribuciones que no aportan nada,\n",
-    "            # sustituir   \n",
-    "            #      createUserTextContribution\n",
-    "            # con\n",
-    "            #      createNonEmptyUserTextContribution\n",
     "            result = createUserTextContribution(contrib, contribAtt)\n",
     "            attValueDict[contrib[C_CONTRIB[\"userIdAtt\"]]] = result\n",
     "        postDict[key] = attValueDict\n",
@@ -21454,7 +21425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "784c88ed",
    "metadata": {},
    "outputs": [
@@ -22763,19 +22734,19 @@
        "   'category': 'interest'}]}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Ejemplo de lo que se genera en cada clave\n",
+    "# Example for a key in postDict\n",
     "postDict[\"itRemindsMeOf_emotions\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "db288928",
    "metadata": {},
    "outputs": [],
@@ -22786,7 +22757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "054513dc",
    "metadata": {},
    "outputs": [],
