Adding DMH and removing errors and Spanish comments in GAM

--- a/GAM/GAMParser.ipynb
+++ b/GAM/GAMParser.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
+    "import json\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -59,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e0584895",
+   "id": "8a9a42e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "98661034",
+   "id": "e1aac319",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22762,18 +22763,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# postDict es un diccionario en el que:\n",
-    "# - Las claves son el tipo de interacción que estoy interesado en enviar al servidor. P.e. itRemindsMeOf_text envía contribuciones cuyo pname es itRemindsMeOf.text\n",
-    "# - Los valores son diccionarios en los que las claves son ids de usuarios y los valores son todas las contribuciones de ese usuario y del tipo fijado por la clave anterior. \n",
+    "# postDict is a dictionary where:\n",
+    "# - Keys are the interaction/contribution types that we are interested in to send to CM\n",
+    "# For example: itRemindsMeOf_text key contains all the contributions with the text of \"itRemindsMeOf\" (whose pname is itRemindsMeOf.text)\n",
+    "# - Values are dictionaries where keys are userIds and values are a list of contributions for this user of the type described by the key.\n",
     "\n",
-    "# Para hacer los POST:\n",
+    "# # To POST users to a CM server in localhost:8080 uncomment next lines\n",
     "# server = \"http://localhost:8080\"\n",
     "# contribTypes = [\"itRemindsMeOf_text\", \"itRemindsMeOf_emotions\"] \n",
     "# for ctype in contribTypes:\n",
     "#    contribsDict = postDict[cType]\n",
     "#    for key, value in contribsDict.items():\n",
     "#        response=requests.post(f'{server}/v1.1/users/{key}/update-generated-content', json = value)\n",
-    "        # procesar el resultado de response"
+    "         # Process response value"
    ]
   }
  ],
