--- a/DMH/DMH_addValues.ipynb
+++ b/DMH/DMH_addValues.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "d2227e5a",
    "metadata": {},
    "outputs": [],
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "49f84d77",
    "metadata": {},
    "outputs": [],
    "source": [
-    "FOLDER = \"./data/originalData/\"\n",
+    "FOLDER = \"./data/\"\n",
     "FOLDERWRITE = \"./data/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "e910f2b5",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "477cde36",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f4b13925",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        " '_updated': True}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "3cdfdd59",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "78773f7f",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        " 'EkmanEmotions': []}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "9baa737e",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "48b9c1ef",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "44727c4b",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "47469bbd",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
        " '_updated': True}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,12 +313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "44a1bce3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(FOLDERWRITE+'DMH_127-AudioRecorded-DEGARI.json', \"w\") as outfile:\n",
+    "with open(FOLDERWRITE+'DMH_127-AudioRecorded-DEGARI-Values.json', \"w\") as outfile:\n",
     "    json.dump(list(userData2.values()), outfile, indent=2)"
    ]
   },
